# expense-management-db

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: e6a9d44b2bed_add_database_constraints_and_indexes.py  e7186a76a172_create_initial_expense_management_schema.py
docs/: database_layout.md  database_schema.drawio
src/expense_management/core/: config.py
src/expense_management/db/: __init__.py  session.py
src/expense_management/models/: __init__.py  account.py  association.py  attachment.py  budget.py  category.py  enums.py  merchant.py  mixins.py  recurring.py  recurring_transaction.py  tag.py  transaction.py  transaction_split.py  user.py
src/scripts/: check_models.py
