[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-management"
version = "0.1.0"
description = "Database schema and Alembic setup for an expense management system."
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"