[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-management"
version = "0.1.0"
description = "Database schema and Alembic setup for an expense management system."
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]